<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitleGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:textColor="@color/BlackColor"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/textNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:layout_below="@+id/textTitleGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/BlackColor"/>

    <Button
        android:id="@+id/textContinueGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_game"
        android:layout_below="@+id/textNewGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/BlackColor"/>

    <Button
        android:id="@+id/textQuitGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_game"
        android:layout_below="@+id/textContinueGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/BlackColor"/>

</RelativeLayout>